# BzhCamp2026

./: .gitignore  package-lock.json  package.json
demo/: .env  Dockerfile  docker-compose.yml  realm-export.json  replay_refresh.sh
demo/api-dpop/: api_dpop.py  pyproject.toml
demo/myapp1/: index.html  keycloak.js
demo/myapp2/: index.html  keycloak-dpop.js  keycloak.js
demo/themes/bzhcamp/login/resources/css/: styles.css
doc/: 00_oidc.adoc  01_pkce.adoc  02_failles.adoc  03_dpop.adoc  04_comment.adoc  05_next.adoc  main.adoc
doc/css/: reveal-override.css
doc/images/: oidc-auth.plantuml  oidc-pkce-dpop.plantuml  oidc-pkce.plantuml  oidc-refresh-dpop.plantuml  oidc-refresh.plantuml  oidc-usage-dpop.plantuml  oidc-usage.plantuml
