[tool.poetry]
name = "api-dpop"
version = "0.1.0"
description = ""
authors = ["Jérome Marchand <jerome.marchand@zenika.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.138.0"
uvicorn = "^0.49.0"
authlib = "^1.7.2"
requests = "^2.34.2"
joserfc = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
